# pants-jupyter-plugin

./: .gitignore  CHANGES.md  README.md  RELEASE.md  TODO.md  mypy.ini  pyproject.toml  tox.ini
.github/actions/expose-pythons/: action.yml
.github/actions/run-tox/: action.yml
.github/workflows/: ci.yml  release.yml
examples/: pants_load.ipynb
pants_jupyter_plugin/: __init__.py  cache.py  download.py  env.py  lock.py  pex.py  plugin.py
scripts/: changelog.py
tests/: conftest.py  test_examples.py  test_plugin.py
